<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/view"
        android:title="@string/viewProfile"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/edit"
        android:title="@string/editProfile"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/main"
        android:title="@string/btn_main"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/btn_logout"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />

</menu>