<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:contentDescription="@string/carShare"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lbl_name"
            android:textSize="20dp"
            android:text="@string/hint_name"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:padding="5dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <TextView
            android:id="@+id/txtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lbl_name"
            android:textSize="20dp"
            android:text="@string/hint_email"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"

            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <TextView
            android:id="@+id/txtphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lbl_name"
            android:textSize="20dp"
            android:text="@string/hint_phone"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:inputType="phone"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <TextView
            android:id="@+id/txtabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lbl_name"
            android:textSize="20dp"
            android:text="@string/hint_about"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            />
        <EditText
            android:id="@+id/aboutInfoChange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/input_register_bg"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_register_bg"
            android:text="@string/btn_save"
            android:textColor="@color/white" />



        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/dark_text"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>